added line break

--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
     <article>
       <h1 class="topheader">You've never seen kittens like this!</h1>
       <img src="https://placekitten.com/1000/600" alt="Kitten in my article" class="artimg">
-      <h2>Get ready for more kittens than you can shake your tail at!</h2>
+      <h2>Get ready for more kittens than you can shake your tail at!</h2><br>
       <h3>First, let's talk kitten mittens</h3>
       <p class="first">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus suscipit facilis eligendi distinctio corporis. Incidunt, optio natus nemo sapiente voluptatem ea in, velit dolorem officia repellat autem atque! Cum, recusandae.
