Attempting git credentials

--- a/blog.html
+++ b/blog.html
@@ -44,6 +44,7 @@
       border: 3px dotted red;
       background-color: lightblue;
       display: inline;
+      margin: 40px auto;
     }
   
   </style>
