--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <header>
-    <h1>Mega Kitten Power Blog! WoWoWoW!</h1>
+    <h1>Mega Kitten Power Blog! WoWoWoW! MeowmeoWMeow!</h1>
     <img src="https://placekitten.com/1100/800" alt="Cute kitten" class="headimg">
   </header>
   <content>
