Removed index.html, added app.js and styles.css. Small content changes

--- a/blog.html
+++ b/blog.html
@@ -1,64 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kitten blog!</title>
-  <style>
-    body {
-      background-color: pink;
-    }
-    header h1 {
-      border: 3px dotted darkviolet;
-      border-width: 200px;
-      padding: 15px;
-      text-align: center;
-      color: purple;
-      font-size: 60px;
-    }
-    img {
-      display: block;
-      margin: 50px auto;
-      width: 50%;
-      border: 5px dashed cyan;
-    }
-    article {
-      text-align: center;
-    }
-    .topheader {
-      padding: 10px 15px;
-      color: green;
-      border: 5px solid rebeccapurple;
-      display: inline;
-      background-color: navajowhite;
-    }
-    h2 {
-      color: darkorange;
-      display: inline;
-      border: 3px solid green;
-      background-color: navajowhite;
-    }
-    h3 {
-      color: hotpink;
-      border: 3px dotted red;
-      background-color: lightblue;
-      display: inline;
-      margin: 40px auto;
-    }
-  
-  </style>
+  <link rel="stylesheet" href="styles.css">
+  <script src="app.js"></script>
 </head>
+
 <body>
   <header>
-    <h1>Mega Kitten Power Blog! WoWoWoW! MeowmeoWMeow!</h1>
+    <h1>Mega Kitten Power Blog! WoWoWoW! MeoWMeoWMeoW!</h1>
     <img src="https://placekitten.com/1100/800" alt="Cute kitten" class="headimg">
   </header>
   <content>
     <article>
       <h1 class="topheader">You've never seen kittens like this!</h1>
       <img src="https://placekitten.com/1000/600" alt="Kitten in my article" class="artimg">
-      <h2>Get ready for more kittens than you can shake your tail at!</h2><br>
+      <h2>Get ready for more kittens than you can shake your tail at!</h2><br><br>
       <h3>First, let's talk kitten mittens</h3>
       <p class="first">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus suscipit facilis eligendi distinctio corporis. Incidunt, optio natus nemo sapiente voluptatem ea in, velit dolorem officia repellat autem atque! Cum, recusandae.
@@ -77,11 +38,13 @@
         <li>Resting in the sun</li>
         <li>Nibble some kibble</li>
       </ul>
-      <p>I bet you're wondering what you could do to help? Call 503.455.4575 now!</p>
+      <p>I bet you're wondering what you could do to help? Call 503.455.4575 now! Also check out <a href="https://www.youtube.com/watch?v=ngycU76wvoQ" target="_blank">this documentary!</a></p>
     </article>
   </content>
   <footer>
-    <p>&copy;Dan Meloy</p>
+    <p class="footer">&copy;Dan Meloy</p>
   </footer>
+
 </body>
+
 </html>
