Added button and input functions

--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,8 @@
   <header>
     <h1>Mega Kitten Power Blog! WoWoWoW! MeoWMeoWMeoW!</h1>
     <img src="https://placekitten.com/1100/800" alt="Cute kitten" class="headimg">
+    <button onclick="showAlert()">Click me to know what you're getting into...</button>
+    <input oninput="logHello()" />
   </header>
   <content>
     <article>
